# speechpro-task

./: .clang-format  .travis.yml  CMakeLists.txt  README.md  appveyor.yml  conanfile.txt
lib/: CMakeLists.txt  integral_processing.cpp  integral_processing.hpp  processing_context.cpp  processing_context.hpp
test/: CMakeLists.txt  common.hpp  main.cpp  precalculated_matrix.cpp  random_matrix.cpp
test/data/: CV_16U_3x2x1.txt  CV_8U_159x181x3.txt  CV_8U_2x2x3.txt  CV_8U_6x6x1.txt
test/data/expected/: CV_16U_3x2x1.integral  CV_8U_159x181x3.integral  CV_8U_2x2x3.integral  CV_8U_6x6x1.integral
tools/: CMakeLists.txt  integral_image.cpp
